--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -258,6 +258,11 @@
         "schedulePublicationRequired":"Schedule Publication is required"
       }
     },
+    "button":{
+      "addPublication":"Add Publication",
+      "editPublication":"Edit Publication",
+      "deletePublication":"Delete Publication"
+    },
   
     "table": {
       "name": "Name",
@@ -352,26 +357,26 @@
       }
     },
     "button": {
-      "addCampaign": "Agregar Campaña",
-      "editCampaign": "Editar Campaña",
-      "deleteCampaign": "Eliminar Campaña"
+      "addCampaign": "Add Campaign",
+      "editCampaign": "Edit Campaign",
+      "deleteCampaign": "Delete Campaign"
     },
     "table": {
-      "name": "Nombre",
-      "description": "Descripción",
-      "publications": "Publicaciones",
-      "media": "Archivos",
-      "status": "Estado",
-      "actions": "Acciones"
+      "name": "Name",
+      "description": "Description",
+      "publications": "Publications",
+      "media": "Media",
+      "status": "Status",
+      "actions": "Actions"
     },
     "messages": {
-      "addSuccess": "¡Campaña agregada exitosamente!",
-      "addError": "Error al agregar campaña",
-      "updateSuccess": "¡Campaña actualizada exitosamente!",
-      "updateError": "Error al actualizar campaña",
-      "deleteSuccess": "¡Campaña eliminada exitosamente!",
-      "deleteError": "Error al eliminar campaña",
-      "fetchError": "Error al cargar campañas",
+      "addSuccess": "¡Campaign added successfully!",
+      "addError": "Error adding campaign",
+      "updateSuccess": "¡Campaign updated successfully!",
+      "updateError": "Error updating campaign",
+      "deleteSuccess": "¡Campaign deleted successfully!",
+      "deleteError": "Error deleting campaign",
+      "fetchError": "Error fetching campaigns",
       "confirmDelete": {
         "title": "¿Estás seguro?",
         "text": "¡No podrás recuperar esta campaña!",
@@ -380,28 +385,28 @@
       }
     },
     "actions":{
-      "viewCampaign":"Ver Campaña",
-      "edit":"Editar",
-      "publishNow":"Publicar Ahora",
-      "viewDetails":"Ver Detalles",
-      "delete":"Eliminar",
-      "active":"Activa",
-      "remove":"Eliminar",
-      "change":"Cambiar"
+      "viewCampaign":"View Campaign",
+      "edit":"Edit",
+      "publishNow":"Publish Now",
+      "viewDetails":"View Details",
+      "delete":"Delete",
+      "active":"Active",
+      "remove":"Remove",
+      "change":"Change"
     },
     "headers": {
-     "status": "Estado",
-     "duration": "Duración",
-     "mediaFiles": "Archivos",
-     "actions": "Acciones"
+     "status": "Status",
+     "duration": "Duration",
+     "mediaFiles": "Media Files",
+     "actions": "Actions"
     },
     "filters": 
     {
-      "all": "Todo",
-      "active": "Activa",
-      "completed": "Completada",
-      "upcoming": "Proximas",
-      "draft": "Borrador"
+      "all": "All",
+      "active": "Active",
+      "completed": "Completed",
+      "upcoming": "Upcoming",
+      "draft": "Draft"
     }
   },
 
@@ -518,7 +523,8 @@
       "success": "Success",
       "failed": "Failed",
       "pending": "Pending",
-      "published": "Published"
+      "published": "Published",
+      "deleted": "Deleted"
     },
     "empty": "No logs found",
     "loading": "Loading logs...",
