--- a/resources/js/locales/es.json
+++ b/resources/js/locales/es.json
@@ -38,7 +38,8 @@
     "manageContent": "Gestionar Contenido",
     "analytics": "Analíticas",
     "aiChat": "Chat IA",
-    "logout": "Cerrar Sesión"
+    "logout": "Cerrar Sesión",
+    "notifications": "Notificaciones"
   },
   "welcome": {
     "title": "Gestiona tu contenido",
@@ -807,7 +808,6 @@
         "confirmButton": "Desconectar y eliminar todo"
       }
     },
-
     "modals": {
       "add": {
         "title": "Nueva Campaña",
@@ -868,5 +868,19 @@
         "scheduleDeleteError": "Error al eliminar la publicación programada"
       }
     }
+  },
+  "notifications": {
+    "title": "Notificaciones",
+    "new": "nuevas",
+    "mark_all_read": "Marcar todo como leído",
+    "new_content": "Nuevo contenido disponible",
+    "content_ready": "Tu contenido ha sido procesado y está listo para publicar.",
+    "analytics_ready": "Reporte de analíticas",
+    "report_generated": "El reporte mensual de rendimiento está disponible.",
+    "scheduled_post": "Publicación programada",
+    "post_scheduled": "Tu publicación ha sido programada exitosamente.",
+    "warning": "Advertencia de sistema",
+    "api_limit": "Estás cerca de alcanzar tu límite de API mensual.",
+    "no_notifications": "No tienes notificaciones pendientes"
   }
 }
