--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -788,7 +788,7 @@
         "connectToShare": "Connect to start sharing"
       },
       "actions": {
-        "connect": "Connect Account",
+        "connect": "Connect",
         "disconnect": "Disconnect",
         "processing": "Processing..."
       },
