--- a/resources/js/locales/es.json
+++ b/resources/js/locales/es.json
@@ -781,7 +781,7 @@
         "connectToShare": "Conecta para comenzar a compartir"
       },
       "actions": {
-        "connect": "Conectar Cuenta",
+        "connect": "Conectar",
         "disconnect": "Desconectar",
         "processing": "Procesando..."
       },
