--- a/resources/js/locales/es.json
+++ b/resources/js/locales/es.json
@@ -881,7 +881,10 @@
     "post_scheduled": "Tu publicación ha sido programada exitosamente.",
     "warning": "Advertencia de sistema",
     "api_limit": "Estás cerca de alcanzar tu límite de API mensual.",
-  
+    "high_priority": "Alta prioridad",
+    "normal_priority": "Normal",
+    "low_priority": "Baja prioridad",
+    "all": "Todo",
     "modal": {
       "title": "Notificaciones",
       "new": "nuevas",
